Adding A64fx (Fugaku) compatibility
Added --cxx=a64fx option
Added MPI_IPROBE_ENABLED switch
Removed #pragma omp declare simd from eos.hpp

--- a/src/defs.hpp.in
+++ b/src/defs.hpp.in
@@ -63,6 +63,9 @@
 // use double precision for HDF5 output? default=0 (false; write out binary32)
 #define H5_DOUBLE_PRECISION_ENABLED @H5_DOUBLE_PRECISION_ENABLED@
 
+// enable/disable MPI_Iprobe (default = 1 (true), choose NOT for A64fx)
+#define MPI_IPROBE_ENABLED @MPI_IPROBE@
+
 
 // configure.py dict(definitions) Boolean string macros:
 // (these options have the latter (false) option as defaults, unless noted otherwise)
