The current A64fx version
I'm afraid I broke my git repository and now attempting to fix it.

--- a/src/defs.hpp.in
+++ b/src/defs.hpp.in
@@ -78,6 +78,9 @@
 // OpenMP parallelization (OPENMP_PARALLEL or NOT_OPENMP_PARALLEL)
 #define @OPENMP_OPTION@
 
+// utofu parallelization (UTOFU_PARALLEL or NOT_UTOFU_PARALLEL)
+#define @UTOFU_OPTION@
+
 // HDF5 output (HDF5OUTPUT or NO_HDF5OUTPUT)
 #define @HDF5_OPTION@
 
